Fri May 21 15:53:53 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/freebcp.c:
	- freebcp's direction doesn't need to be case sensitive (from Craig
	  A. Berry).

Fri May 14 00:06:28 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac win32/Makefile.am win32/freetds.nsi:
	- remove Dev-C++ project files (obsolete)

Wed May 12 13:18:25 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/fakepoll.c: small compile fix for Visual Studio

Wed May 12 10:15:04 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/fakepoll.h src/replacements/fakepoll.c:
	- fix and improve fakepoll for Windows

Wed May 12 10:13:17 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds_sysdep_private.h: fix minor issue with MingW

Wed May 12 09:59:17 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: workaround for header incompatibility

Mon May 10 17:10:10 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds_sysdep_private.h src/dblib/dbopen.c:
	- improve Visual Studio compile

Fri May  7 17:09:50 EDT 2010	JK Lowden <jklowden@freetds.org>
	* src/tds/token.c Applied today's ML patch from Craig A. Berry

Fri May  7 13:55:20 EDT 2010	JK Lowden <jklowden@freetds.org>
	* configure.ac produce gzip tarball, too. 

Thu May  6 21:08:58 EDT 2010	JK Lowden <jklowden@freetds.org>
	* src/dblib/unittests/rpc.c src/dblib/unittests/rpc.sql
	- tidied up and added explicit test for null varchar input	

Sun May  2 13:52:05 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/mem.c:
	- fix unmatched parenthesis (patch from Mark Brand) and minor
	  memory leaks

Fri Apr 30 17:57:22 EDT 2010	JK Lowden <jklowden@freetds.org>
	* src/tds/mem.c initilize client charset per setlocale(3) and friends

Mon Apr 26 11:09:11 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c src/ctlib/unittests/t0007.c:
	- fix maxlength returned by ct_describe for numeric types
