@@ -1,4 +1,4 @@
 EXTRA_DIST = config_h.vms configure.com descrip_mms.template \
-	getpass.c libodbc.opt odbc_driver_axp.opt README.vms
+	edit.c getpass.c libodbc.opt odbc_driver_axp.opt README.vms
 
 clean:
