@@ -1,3 +1,8 @@
+Fri May 21 16:01:47 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* vms/Makefile.am vms/descrip_mms.template vms/edit.c:
+	* vms/getpass.c:
+	- update VMS build files (patch from Craig A. Berry).
+
 Fri May 21 15:53:53 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/apps/freebcp.c:
 	- freebcp's direction doesn't need to be case sensitive (from Craig
@@ -2454,4 +2459,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3024 2010/05/21 13:54:27 freddy77 Exp $
+$Id: ChangeLog,v 1.3025 2010/05/21 14:02:08 freddy77 Exp $
